AMCP Sandbox/force-app/main/default/objects/Fion_Account_Contact_Relationship__c/Fion_Account_Contact_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account-Contact Relationship</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Account Contact Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contact Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>