AMCP Sandbox/force-app/main/default/objects/Fion_Account_Contact_Relationship__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Contact Relationships</relationshipLabel>
    <relationshipName>Account_Contact_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>