AMCP Sandbox/force-app/main/default/objects/Fion_Account_Contact_Relationship__c/fields/Chapter_Role__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Role__c</fullName>
    <label>Chapter Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chapter President</fullName>
            </value>
            <value>
                <fullName>Chapter President-Elect</fullName>
            </value>
            <value>
                <fullName>Chapter Vice President</fullName>
            </value>
            <value>
                <fullName>Chapter Treasurer</fullName>
            </value>
            <value>
                <fullName>Chapter Secretary</fullName>
            </value>
            <value>
                <fullName>Chapter Membership Coordinator</fullName>
            </value>
            <value>
                <fullName>Chapter Faculty Advisor 1</fullName>
            </value>
            <value>
                <fullName>Chapter Faculty Advisor 2</fullName>
            </value>
            <value>
                <fullName>Diplomat</fullName>
            </value>
            <value>
                <fullName>Co-Diplomat</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>PT Coordinator</fullName>
            </value>
            <value>
                <fullName>School Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>